--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="firebase_url">"https://roomzy-cbeb4-default-rtdb.firebaseio.com"</string>
+    <string-array name="category_array">
+        <item>Loại 1</item>
+        <item>Loại 2</item>
+        <item>Loại 3</item>
+        <item>Loại 4</item>
+        <item>Loại 5</item>
+    </string-array>
 </resources>
